manifests/deployment.yml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "gateway-api"
  namespace: "challengespace"
  labels:
    app: "gateway-api"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "gateway-api"
  template:
    metadata:
      labels:
        app: "gateway-api"
    spec:
      containers:
        - name: "gateway-api"
          image: "idboubacar/challenge-semestre2-gateway-api:latest"
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
