manifests/service.yml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "gateway-api"
  namespace: "default"
  labels:
    app: "gateway-api"
spec:
    type: LoadBalancer
    ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
    selector:
        app: "gateway-api"
